add:slicing ui nasabah

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="_3">3</string>
     <string name="request_new_code">Minta kode baru </string>
     <string name="hai">Hai</string>
-    <string name="example_name">Achmad Muchlasin</string>
+    <string name="example_name">Achmad  Muchlasin</string>
     <string name="icon_wallet">"icon saldo "</string>
     <string name="actual_balance">Saldo Aktual</string>
     <string name="example_balance">Rp 200.000</string>
@@ -50,7 +50,7 @@
     <string name="example_desc_transaction_history">saldo yang anda tarik sudah masuk ke rekening mu. mohon check kembali</string>
     <string name="my_profile">Profil Saya</string>
     <string name="profile">Profile saya</string>
-    <string name="change_password">Masukkan Password Lama</string>
+    <string name="change_password">Ubah Password</string>
     <string name="input_old_password">Masukkan Password Lama</string>
     <string name="password_hint">********</string>
     <string name="input_new_password">Masukkan Password Baru</string>
@@ -63,4 +63,36 @@
     <string name="example_date">06 September 2001</string>
     <string name="photo">Foto</string>
     <string name="waste_image">image</string>
+    <string name="photo_your_waste">Foto sampah anda </string>
+    <string name="example_type_waste">Botol Plastik</string>
+    <string name="example_price">Rp 100.000/kg</string>
+    <string name="example_status_history">Menunggu setoran ditimbang</string>
+    <string name="title_home">Home</string>
+    <string name="title_account">Akun</string>
+    <string name="withdraw_balance">Tarik Saldo</string>
+    <string name="pick_up_waste">Jemput Sampah</string>
+    <string name="history_deposit">Riwayat Setoran</string>
+    <string name="type_waste">Jenis Sampah</string>
+    <string name="account_number">Nomor rekening tujuan</string>
+    <string name="method_withdraw">Metode yang digunakan</string>
+    <string name="amount">Jumlah penarikan</string>
+    <string name="example_rp">Rp 100.000</string>
+    <string name="random_number">0182028</string>
+    <string name="example_bank">Bank BNI</string>
+    <string name="requirement">Syarat dan ketentuan berlaku</string>
+    <string name="example_requirement">1. saldo tidak boleh kurang dari Rp 25.000 \n2. penarikan tidak boleh kurang dari Rp 50.000 \n3. Biaya cash administrasi akan ditanggungkan ke nasabah</string>
+    <string name="withdraw">Tarik</string>
+    <string name="total">Total</string>
+    <string name="title_admin_menu">Menu</string>
+    <string name="title_admin_home">Home</string>
+    <string name="title_admin_account">AKun</string>
+    <string name="nasabah">Nasabah</string>
+    <string name="sales_result">Masukan Hasil Penjualan</string>
+    <string name="waste_deposit">Setoran sampah</string>
+    <string name="balance_withdrawal_history">Riwayat Penarikan Saldo</string>
+    <string name="news">Berita</string>
+    <string name="report_customer">Laporan Nasabah</string>
+    <string name="customer_deposit_waste">Masukan Penyetoran Sampah Nasabah</string>
+    <string name="schedulling_open_warehouse">Penjadwalan Buka Gudang</string>
+    <string name="language">Bahasa</string>
 </resources>
